[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Marius Ihring <marius.ihring.dev@gmail.com"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
actix-web = "4.3.1"
reqwest = "0.11.16"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.3.1", features = ["v4"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
tracing = {version = "0.1.37", features = ["log"]}
tracing-subscriber = {version = "0.3.16", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
secrecy = {version = "0.8", features = ["serde"]}
tracing-actix-web = "0.7.4"
unicode-segmentation = "1.10.1"

[dev-dependencies]
once_cell = "1.17.1"
claims = "0.7"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]
